--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -32,7 +32,7 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
-application/icon=""
+application/icon="res://graphical/target.ico"
 application/file_version=""
 application/product_version=""
 application/company_name="Atlantic Studios"
